[tool.poetry]
name = "mhc"
version = "0.1.0"
description = "A mental health tracker without leaving the terminal."
authors = ["Joshua Arulsamy <joshua.gf.arul@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
dataset = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
